--- a/vignettes/scenario-simulation.Rmd
+++ b/vignettes/scenario-simulation.Rmd
@@ -10,15 +10,19 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r setup, include = FALSE}
+```{r setup, include = FALSE, echo=FALSE, cache=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
+options(width = 240)
 ```
 
- This document demonstrates running the screening, diagnosis and treatment decision tree model.
+
+This document demonstrates running the screening, diagnosis and treatment decision tree model.
  
+First, we need to attach the packages we'll need. `treeSimR` is written by us too so this will need to be installed from GitHub.
 
 ```{r, warning=F, message=F}
 library(treeSimR)
@@ -35,59 +39,62 @@ Load in data
 data("intervention_constants", package = "LTBIscreeningproject")
 data("cost_effectivness_params", package = "LTBIscreeningproject")
 data("scenario_parameters", package = "LTBIscreeningproject")
-data("year_prob.activetb_cens_exituk", package = "LTBIscreeningproject")
-data("year_prob.activetb_cmprsk_exituk", package = "LTBIscreeningproject")
 data("model_input_cohort", package = "LTBIscreeningproject")
 ```
 
 
-## Specific intervention data prep
+## Intervention specific data prep
 
-
-According to the parameter values we specified in `interv` we first need to prepare the cohort data set.
+According to the parameter values we specified in `interv` we first need to prepare the cohort data set to only include those individuals we're interested in analysing.
 
 Only use a single year cohort
-```r
-IMPUTED_sample_year_cohort <- dplyr::filter(IMPUTED_sample,
-                                            issdt_year == interv$year_cohort)
+```{r}
+cohort <- dplyr::filter(IMPUTED_sample,
+                        issdt_year == interv$year_cohort)
 ```
 
-EWNI stay long enough
-```r
-IMPUTED_sample_year_cohort <- dplyr::filter(IMPUTED_sample_year_cohort,
-                                            date_exit_uk1_issdt.years >= interv$min_screen_length_of_stay)
+EWNI stay long enough to be screened
+```{r}
+cohort <- dplyr::filter(cohort,
+                        date_exit_uk1_issdt.years >= interv$min_screen_length_of_stay)
 ```
 
 Only keep those inidiviuals that are screened before some other event
-```r
+```{r eval = FALSE}
+##TODO: knitting error
+  # print(head(cohort$screen, 10))
+  # print(head(cohort$screen_year, 10))
 if (interv$screen_with_delay) {
-  IMPUTED_sample_year_cohort <- dplyr::filter(IMPUTED_sample_year_cohort,
-                                              screen == 1)}
+  cohort <- dplyr::filter(cohort,
+                        screen == 1)
+  }
 ```
 
 Do we include student in the screening programme?
-```r
+```{r student}
 if (interv$no_students) {
-  IMPUTED_sample_year_cohort <- dplyr::filter(IMPUTED_sample_year_cohort,
-                                              visatype2 != "Students")}
+  cohort <- dplyr::filter(cohort,
+                          visatype2 != "Students")}
 ```
 
-Remove individuals from 'lower' incidence countries
-```r
-IMPUTED_sample_year_cohort <- dplyr::filter(IMPUTED_sample_year_cohort,
-                                            who_prev_cat_Pareek2011 %in% interv$incidence_grps_screen)
+Include individuals from 'higher' incidence countries only
+```{r}
+cohort <- dplyr::filter(cohort,
+                        who_prev_cat_Pareek2011 %in% interv$incidence_grps_screen)
 ```
 
 Count numbers of TB cases
 
-```r
+```{r eval = F}
+##TODO: knitting error
+
 n.exit_tb <-
-  IMPUTED_sample_year_cohort %>%
+  cohort %>%
   dplyr::filter(exituk_tb) %>%
   dplyr::count()
 
 n.uk_tb <-
-  IMPUTED_sample_year_cohort %>%
+  cohort %>%
   dplyr::filter(uk_tb) %>%
   dplyr::count()
 
@@ -105,13 +112,17 @@ num_all_tb_QALY <-
     n.uk_tb + n.exit_tb}
 ```
 
+```{r}
+saveRDS(cohort, file = "cohort.Rds")
+```
 
-## Prep decision tree
+
+## Prepare decision tree
 
 Load input files. We have defined the decision tree using YAML syntax.
 We have a separate trees for cost and health. They have the same structure and probabilities but different values on the branches. We also create our own class.
 
-```r
+```{r warning=F, message=F}
 osNode.cost.fileName <- system.file("data", "LTBI_dtree-cost-symptoms.yaml",
                                     package = "LTBIscreeningproject")
 
@@ -125,7 +136,7 @@ costeff.health <- treeSimR::costeffectiveness_tree(yaml_tree = osNode.health.fil
 osNode.health <- costeff.health$osNode
 ```
 
-```{r echo=F, out.width=20}
+```{r echo=F}
 costeff.cost <- treeSimR::costeffectiveness_tree(yaml_tree = "LTBI_dtree-cost-symptoms.yaml")
 print(costeff.cost)
 ```
@@ -133,37 +144,37 @@ print(costeff.cost)
 
 Create look-up tables using the cohort data to give proportion in each incidence in country of origin and the probability of LTBI for each of these.
 
-```r
+```{r}
 who_levels <- c("(0,50]", "(50,150]", "(150,250]", "(250,350]", "(350,1e+05]")
 
-p_incid_grp <- miscUtilities::prop_table(IMPUTED_sample_year_cohort$who_prev_cat_Pareek2011)
+p_incid_grp <- miscUtilities::prop_table(cohort$who_prev_cat_Pareek2011)
 
 pLatentTB.who <- data.frame(who_prev_cat_Pareek2011 = names(p_incid_grp),
                             LTBI = c(0.03, 0.13, 0.2, 0.3, 0.3))
 ```
 
 Then insert these probabilities in to the decision tree
-```r
+```{r}
 for (i in seq_along(who_levels)) {
-
+  
   osNode.cost$Set(p = p_incid_grp[i],
                   filterFun = function(x) x$name == who_levels[i])
-
+  
   osNode.health$Set(p = p_incid_grp[i],
                     filterFun = function(x) x$name == who_levels[i])
 }
 
 for (i in who_levels) {
-
+  
   pLTBI <- subset(pLatentTB.who,
                   who_prev_cat_Pareek2011 == i,
                   select = LTBI)
-
+  
   osNode.cost$Set(p = pLTBI,
                   filterFun = function(x) x$pathString == miscUtilities::pastef("LTBI screening cost", i, "LTBI"))
   osNode.health$Set(p = pLTBI,
                     filterFun = function(x) x$pathString == miscUtilities::pastef("LTBI screening QALY loss", i, "LTBI"))
-
+  
   osNode.cost$Set(p = 1 - pLTBI,
                   filterFun = function(x) x$pathString == miscUtilities::pastef("LTBI screening cost", i, "non-LTBI"))
   osNode.health$Set(p = 1 - pLTBI,
@@ -171,13 +182,41 @@ for (i in who_levels) {
 }
 ```
 
+
 ## Decision tree output
 
+Now we can run the decision tree model using the scenario parameter values, active TB cases, and cost and health decision tree objects.
+
+A single scenario:
 
 ```{r}
 decision_tree_cluster(parameters = scenario_parameters[[1]],
-                       n.uk_tb = 10,
-                       n.exit_tb = 10,
-                       cost_dectree = "osNode_cost_2009.Rds",
-                       health_dectree = "osNode_cost_2009.Rds")
+                      N.mc = interv$N.mc,
+                      n.uk_tb = 10, #as.numeric(n.uk_tb),
+                      n.exit_tb = 10, #as.numeric(n.exit_tb),
+                      cost_dectree = "osNode_cost_2009.Rds",
+                      health_dectree = "osNode_cost_2009.Rds")
+```
+
+Multiple scenarios:
+
+```{r}
+lapply(scenario_parameters[1:3],
+       decision_tree_cluster,
+       N.mc = 1,
+       n.uk_tb = 10, #as.numeric(n.uk_tb),
+       n.exit_tb = 10, #as.numeric(n.exit_tb),
+       cost_dectree = "osNode_cost_2009.Rds",
+       health_dectree = "osNode_cost_2009.Rds")
+```
+
+```{r echo = FALSE}
+lapply(scenario_parameters[1:3],
+       decision_tree_cluster,
+       N.mc = 10,
+       n.uk_tb = 10, #as.numeric(n.uk_tb),
+       n.exit_tb = 10, #as.numeric(n.exit_tb),
+       cost_dectree = "osNode_cost_2009.Rds",
+       health_dectree = "osNode_cost_2009.Rds") %>% 
+  saveRDS(file = "decision_tree_output.Rds")
 ```
